--- a/vital-tracker/static/index.html
+++ b/vital-tracker/static/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Vital Tracker</title>
-    <style>
-      video { display:block; margin-bottom:8px }
-    </style>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="/static/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <nav style="margin-bottom:12px;">
@@ -16,33 +14,37 @@
       <a href="#" data-view="photos">Photos</a>
     </nav>
 
+    <hr/>
     <section id="quick">
-      <hr>
       <h1>Quick Entry</h1>
-      <div>
-        <label>SYS: <input id="sys" type="number" /></label>
-        <label>DIA: <input id="dia" type="number" /></label>
-        <label>Pulse: <input id="pulse" type="number" /></label>
-        <label>Temp (C): <input id="temp" type="number" step="0.1" /></label>
+      <div class="inputs-grid">
+        <label>SYS
+          <input id="sys" type="number" />
+        </label>
+        <label>DIA
+          <input id="dia" type="number" />
+        </label>
+        <label>Pulse
+          <input id="pulse" type="number" />
+        </label>
+        <label>Temp (C)
+          <input id="temp" type="number" step="0.1" />
+        </label>
       </div>
 
-      <div>
-        <video id="video" autoplay playsinline style="width:320px;height:240px;border:1px solid #ccc"></video>
-        <div style="margin-top:8px; display:flex; gap:12px; align-items:center;">
-          <div>
-            <button id="cap_cycle">Capture Front</button>
-            <div style="font-size:12px;color:#666;margin-top:6px"><span id="cap_status">0 / 3 captured</span></div>
-          </div>
+      <div class="media">
+        <video id="video" autoplay playsinline></video>
+        <div class="capture-controls">
+          <button id="cap_cycle">Capture Front</button>
+          <div class="hint"><span id="cap_status">0 / 3 captured</span></div>
         </div>
       </div>
 
-      <div>
+      <div class="actions">
         <button id="submit">Save Entry</button>
         <span id="status"></span>
       </div>
     </section>
-
-    <hr />
 
     <div id="dashboard_container">
       <div id="view-table" class="view-section" style="display:none">
@@ -69,6 +71,7 @@
               <th data-key="pulse">Pulse</th>
               <th data-key="temp_c">Temp (C)</th>
               <th>Photo</th>
+              <th>Delete</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -77,7 +80,14 @@
 
       <div id="view-graphs" class="view-section" style="display:none">
         <h1>Dashboard — Graphs</h1>
-        <label>View: <select id="graph_view_select"><option value="full">Full</option><option value="30d">Last 30 days</option><option value="7d_weekly">Weekly Avg</option><option value="avg_compare">Avg Compare</option></select></label>
+        <div style="display:flex;gap:16px;align-items:center;flex-wrap:wrap">
+          <label>View: <select id="graph_view_select"><option value="full">Full</option><option value="30d">Last 30 days</option><option value="7d_weekly">Weekly Avg</option><option value="avg_compare">Avg Compare</option></select></label>
+          <div class="graph-tabs" style="display:flex;gap:8px;">
+            <button type="button" class="graph-tab" data-tab="bp">Blood Pressure</button>
+            <button type="button" class="graph-tab" data-tab="pulse">Heart Rate</button>
+            <button type="button" class="graph-tab" data-tab="temp">Temperature</button>
+          </div>
+        </div>
         <div class="charts" style="display:flex;gap:20px;flex-wrap:wrap;margin-top:12px;">
           <div class="chart-card" style="flex:1 1 300px"><canvas id="bpChart"></canvas></div>
           <div class="chart-card" style="flex:1 1 300px"><canvas id="pulseChart"></canvas></div>
@@ -87,14 +97,9 @@
 
       <div id="view-photos" class="view-section" style="display:none">
         <h1>Dashboard — Photos</h1>
-        <button id="refresh_entries_photos">Refresh</button>
         <div id="photos_gallery"></div>
       </div>
     </div>
-
-    <footer>
-      <small>Open the dashboard links above for table, graphs, or photos views.</small>
-    </footer>
 
     <script src="/static/app.js"></script>
     <script>
@@ -109,7 +114,6 @@
             const el = document.getElementById('view-'+v);
             if(el) el.style.display = 'block';
           }
-          try{ localStorage.setItem('vital_active_view', v); }catch(e){}
           try{ if(window.vital_loadEntries) window.vital_loadEntries(); }catch(e){}
         }
         links.forEach(a=> a.addEventListener('click', (e)=>{ e.preventDefault(); const v = a.getAttribute('data-view'); showView(v); }));
@@ -118,8 +122,8 @@
         try{ if(window.vital_bindControls) window.vital_bindControls(); }catch(e){ console.warn('bind failed', e); }
         try{ if(window.vital_loadEntries) window.vital_loadEntries(); }catch(e){ console.warn('loadEntries failed', e); }
 
-        const last = localStorage.getItem('vital_active_view') || 'quick';
-        showView(last);
+        // Always default to Quick Entry on load; do not persist last view
+        showView('quick');
       });
     </script>
   </body>
