Added face temp and pain scale attributes

--- a/vital-tracker/static/index.html
+++ b/vital-tracker/static/index.html
@@ -30,6 +30,12 @@
         <label>Temp (C)
           <input id="temp" type="number" step="0.1" />
         </label>
+        <label>Jaw Temp (C)
+          <input id="temp_jaw" type="number" step="0.1" />
+        </label>
+        <label>Pain (1-10)
+          <input id="pain" type="number" />
+        </label>
       </div>
 
       <div class="media">
@@ -70,6 +76,8 @@
               <th data-key="dia">DIA</th>
               <th data-key="pulse">Pulse</th>
               <th data-key="temp_c">Temp (C)</th>
+              <th data-key="temp_jaw">Jaw Temp (C)</th>
+              <th data-key="pain">Pain</th>
               <th>Photo</th>
               <th>Delete</th>
             </tr>
