--- a/vital-tracker/static/index.html
+++ b/vital-tracker/static/index.html
@@ -5,6 +5,7 @@
     <title>Vital Tracker</title>
     <link rel="stylesheet" href="/static/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@^2"></script>
   </head>
   <body>
     <nav style="margin-bottom:12px;">
@@ -32,6 +33,9 @@
         </label>
         <label>Jaw Temp (C)
           <input id="temp_jaw" type="number" step="0.1" />
+        </label>
+        <label>Room Temp (C)
+          <input id="temp_room" type="number" step="0.1" />
         </label>
         <label>Pain (1-10)
           <input id="pain" type="number" />
@@ -77,6 +81,7 @@
               <th data-key="pulse">Pulse</th>
               <th data-key="temp_c">Temp (C)</th>
               <th data-key="temp_jaw">Jaw Temp (C)</th>
+              <th data-key="temp_room">Room Temp (C)</th>
               <th data-key="pain">Pain</th>
               <th>Photo</th>
               <th>Delete</th>
